--- a/elt_llm_consumer/pyproject.toml
+++ b/elt_llm_consumer/pyproject.toml
@@ -18,6 +18,7 @@ elt-llm-consumer-handbook-model = "elt_llm_consumer.fa_handbook_model_builder:ma
 elt-llm-consumer-handbook-glossary = "elt_llm_consumer.fa_handbook_leanix_glossary:main"
 elt-llm-consumer-integrated-catalog = "elt_llm_consumer.fa_integrated_catalog:main"
 elt-llm-consumer-coverage-validator = "elt_llm_consumer.fa_coverage_validator:main"
+elt-llm-consumer-consolidated-catalog = "elt_llm_consumer.fa_consolidated_catalog:main"
 
 [build-system]
 requires = ["uv_build>=0.9.15,<0.10.0"]
